# singing-bridge

./: .bootstrap-complete  .dockerignore  .env.example  .gitignore  .mcp.json  .sprint-base-commit-16  .sprint-base-commit-17  .sprint-base-commit-19  .sprint-base-commit-7  CHANGES.md  CLAUDE.md  Cargo.toml  Dockerfile  FINDINGS_Sprint13.md  FINDINGS_Sprint14.md  FINDINGS_Sprint16.md  FINDINGS_Sprint17.md  FINDINGS_Sprint18.md  FINDINGS_Sprint19.md  FINDINGS_Sprint2.md  FINDINGS_Sprint20.md  FINDINGS_Sprint25.md  FINDINGS_Sprint3.md  FINDINGS_Sprint5.md  FINDINGS_Sprint6.md  FINDINGS_Sprint7.md  PLAN_Sprint14.md  PLAN_Sprint18.md  PLAN_Sprint19.md  PLAN_Sprint2.md  PLAN_Sprint20.md  PRD_NoHeadphonesMode.md  README.md  REVIEW_Sprint14.md  REVIEW_Sprint16.md  REVIEW_Sprint17.md  REVIEW_Sprint20.md  REVIEW_Sprint3.md  SPRINTS.md  Simulator.md  (+6 more)
.claude/: project-profile  settings.json
.config/: nextest.toml
Documentation/: COUNCIL_RETROSPECTIVE_S11_S13.md  COUNCIL_RETROSPECTIVE_S12_S12A.md  COUNCIL_RETROSPECTIVE_S8_S11.md  COUNCIL_RETROSPECTIVE_S8_S9.md  PLAN_history.md  student-ux-findings.md  teacher-actions.md  ux-findings.md
council/: metrics_Sprint111.jsonl  metrics_Sprint12A.jsonl  metrics_Sprint13.jsonl  metrics_Sprint14.jsonl  metrics_Sprint15.jsonl  metrics_Sprint17.jsonl  metrics_Sprint19.jsonl  metrics_Sprint20.jsonl  metrics_Sprint24.jsonl  metrics_Sprint25.jsonl  metrics_Sprint26.jsonl
server/: Cargo.toml  build.rs
server/migrations/: 0001_initial.sql  0002_session_log.sql  0003_recordings.sql  0004_password_auth.sql  0005_session_history.sql  0006_accompaniments.sql  0007_bigint_timestamps.sql  0008_musicxml_blob_key.sql  0009_session_events_duration_bigint.sql  0010_session_events_archived_at_bigint.sql  0011_score_pages.sql  0012_per_variant_parts.sql  0013_variant_bar_coords.sql  0014_variant_score_render_status.sql
server/src/: blob.rs  cleanup.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  sidecar.rs  state.rs
server/src/auth/: magic_link.rs  mailer.rs  mod.rs  password.rs  rate_limit.rs  secret.rs  slug.rs
server/src/http/: dashboard.rs  health.rs  history.rs  library.rs  login.rs  loopback.rs  media_token.rs  mod.rs  recording_gate.rs  recordings.rs  security_headers.rs  signup.rs  static_assets.rs  synthetic_auth.rs  teach.rs  test_peer.rs  turn.rs
server/src/ws/: accompaniment.rs  connection.rs  lobby.rs  mod.rs  protocol.rs  rate_limit.rs  session.rs  session_history.rs  session_log.rs
server/tests/: cleanup.rs  db_error_500.rs  db_pool.rs  db_pragmas.rs  http_csp.rs  http_dashboard.rs  http_history.rs  http_library.rs  http_loopback.rs  http_origin.rs  http_signup.rs  http_teach_debug_marker.rs  http_test_peer.rs  magic_link.rs  regression.rs  session_history.rs  session_log.rs  state_concurrency.rs  ws_accompaniment.rs  ws_acoustic_profile.rs  ws_chat.rs  ws_headphones.rs  ws_lobby.rs  ws_lobby_cap.rs  ws_lobby_rejection.rs  ws_lobby_tier.rs  ws_session_handshake.rs  ws_shutdown.rs  ws_signal_relay.rs
server/tests/common/: mod.rs
(+266 files in other folders)
