[package]
name = "singing-bridge-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "singing-bridge-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "set-header"] }
hyper = "1"
http = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

async-trait = "0.1"
dashmap = "6"
url = { version = "2", features = ["serde"] }
futures-util = "0.3"

cookie = "0.18"
regex = "1"
once_cell = "1"
time = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
futures-util = "0.3"
proptest = "1"
serial_test = "3"
tempfile = "3"
